[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/core/DeckBuilder/DeckLoader.gd" type="Script" id=1]
[ext_resource path="res://src/networking/matchmaking/PlayerLobbyObject.gd" type="Script" id=2]

[node name="PlayerLobbyObject" type="HBoxContainer"]
margin_top = 28.0
margin_right = 483.0
margin_bottom = 68.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerName" type="Label" parent="."]
margin_top = 13.0
margin_right = 129.0
margin_bottom = 27.0
size_flags_horizontal = 3
text = "Player Name"

[node name="Status" type="Label" parent="."]
margin_left = 133.0
margin_top = 13.0
margin_right = 198.0
margin_bottom = 27.0
text = "Not Ready"

[node name="DeckLoader" type="MenuButton" parent="."]
margin_left = 202.0
margin_right = 297.0
margin_bottom = 40.0
focus_mode = 2
text = "Choose Deck"
flat = false
script = ExtResource( 1 )

[node name="Spectator" type="CheckButton" parent="."]
margin_left = 301.0
margin_right = 441.0
margin_bottom = 40.0
text = "Spectator"

[node name="Kick" type="Button" parent="."]
margin_left = 445.0
margin_right = 483.0
margin_bottom = 40.0
text = "Kick"

[connection signal="deck_loaded" from="DeckLoader" to="." method="_on_DeckLoader_deck_loaded"]
[connection signal="toggled" from="Spectator" to="." method="_on_Spectator_toggled"]
[connection signal="pressed" from="Kick" to="." method="_on_Kick_pressed"]
